openshift/tmp-deploy/1.0_namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: todo-app-99
  labels:
    name: todo-app-99
